# flask-webapp-builder

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
FlaskWebApp/: build_flask_webapp.py
