[metadata]
name = flask-webapp-builder
version = 1.2.0
author = Christian Garcia
author_email = iyaniyan03112003@gmail.com
description = A Flask Webapp Builder is designed to generate a basic fully flask project structure. Including the directory folders and files also run-server script to execute the webapp server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christiangarcia0311/flask-webapp-builder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    Flask

[options.package_data]
* =
    static/assets/*,
    static/fonts/*,
    static/main.css,
    static/main.js,
    templates/index.html

[options.entry_points]
console_scripts =
    build-flask-web = flask_project_generator.build_flask_web:main
